--- a/act5.2/css/style.css
+++ b/act5.2/css/style.css
@@ -3,7 +3,7 @@
 }
 
 body{
-  background: url("C:/Users/John Michael Amto/Pictures/download/join-background.jpg") no-repeat;
+  background: url("https://jmamto.github.io/Amto_WebDev_Finals/act5.2/img/bg.jpg") no-repeat;
   color: white;
 }
 .main{
