--- a/exam/bootstrap/css/style_member.css
+++ b/exam/bootstrap/css/style_member.css
@@ -3,7 +3,7 @@
 }
 
 body{
-  background: url("C:/Users/John Michael Amto/Desktop/exam/assets/img/Picture2.png") no-repeat;
+  background: url("https://jmamto.github.io/Amto_WebDev_Finals/exam/assets/img/Picture2.png") no-repeat;
 }
 .main{
   float: right;
